bug 790912 - Message shows wrong content (body text) after move to other folder, r=irving